deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgerockinterview-deployment
spec:
  selector:
    matchLabels:
      app: forgerockinterview-pod
  template:
    metadata:
      labels:
        app: forgerockinterview-pod
    spec:
      containers:
      - name: forgerockinterview-container1
        image: angelinedai/sreinterview_forgerock_2
        resources:
          limits:
            cpu: 500m
            memory: 0.5Gi
          requests:
            cpu: 100m
            memory: 0.5Gi
