service.yml
apiVersion: v1
kind: Service
metadata:
  name: forgerockinterview-service
spec:
  selector:
    app: forgerockinterview-pod
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 30000
  type: LoadBalancer
