ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: forgerockinterview-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix 
        path: "/"
        backend:
          serviceName: forgerockinterview-service
          servicePort: 80
